--- a/ecommerceweb/templates/layout2.html
+++ b/ecommerceweb/templates/layout2.html
@@ -3,29 +3,33 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!--<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main1.css') }}">-->
-<link rel="stylesheet" type="text/css" href="main1.css">
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main1.css') }}">
 </head>
+
 <body>
 <div class="navbar" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
-  <a href="#home">Home</a>
+  <a href="{{ url_for('home') }}">Home</a>
     <div class="dropdown">
         <button class="dropbtn">Categories
         <i class="fa fa-caret-down"></i>
         </button>
         <div class="dropdown-content">
-        <a href="#">Handicrafts</a>
-        <a href="#">Home Decor</a>
-        <a href="#">Ayurveda</a>
-        <a href="#">Khadi Cloth products</a>
-        <a href="#">Spices</a>
-        <a href="#">Pickles</a>
+        <a href="{{ url_for('handicrafts') }}">Handicrafts</a>
+        <a href="{{ url_for('homedecor') }}">Home Decor</a>
+        <a href="{{ url_for('ayurveda') }}">Ayurveda</a>
+        <a href="{{ url_for('khadi') }}">Khadi Cloth products</a>
+        <a href="{{ url_for('spices') }}">Spices</a>
+        <a href="{{ url_for('pickles') }}">Pickles</a>
         </div>
     </div> 
     <div class="navbar" style="float: right;">
-        <a href="#login" style="text-align: right;">Login</a>
-        <a href="#signup">Register</a>
-        <a href="#cart"><i class="fa fa-shopping-cart" style="font-size:20px; color:white; padding:5px"></i></a>
+        {% if current_user.is_authenticated %}
+        <a href="{{ url_for('logout') }}">Logout</a>
+        <a href="{{ url_for('cart') }}"><i class="fa fa-shopping-cart" style="font-size:20px; color:white; padding:5px"></i></a>
+        {% else %}
+        <a href="{{ url_for('login') }}" style="text-align: right;">Login</a>
+        <a href="{{ url_for('register') }}">Register</a>
+        
     </div>
 </div>
 <p>trjs</p>
