--- a/ecommerceweb/templates/home.html
+++ b/ecommerceweb/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div class="container-fluid" style="background-color: white;">
-   <center> <h2>Featured Products</h2></center>
+   <center> <h2><span class="title">Featured Products</span></h2></center>
   <div id="demo" class="carousel slide" data-ride="carousel">
 
     <!-- Indicators -->
@@ -38,7 +38,7 @@
 </div>
 <div class="container-fluid">
     <br><br><br>
-    <h2><center>Deals of the Day</center></h2>
+    <h2 class="title"><center>Deals of the Day</center></h2>
     <div class="card-columns">
         <div class="card" style="width:100%">
             <a href="#"><img class="card-img-top" src="{{ url_for('static', filename='gallery13.jpg') }}" alt="Card image" style="width:100%"></a>
