--- a/ecommerceweb/templates/layout.html
+++ b/ecommerceweb/templates/layout.html
@@ -7,14 +7,28 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='pdesp.css') }}">
     <title>Home</title>
     <style>
       /* Make the image fully responsive */
       .carousel-inner img {
           width: 100%;
           height: 100%;
+      }
+      @font-face {
+        font-family: "Samarkan";                     /*any name*/
+        src: url("../static/SAMARN__.TTF");
+      }
+      .title{
+        font-family: "Samarkan";
+      }
+      .text      {
+        text-align: left;
+      }
+      .navbar-custom{
+        background-color: #c74456;
       }
       </style>
 </head>
@@ -46,8 +60,12 @@
           </div>
           <!-- Navbar Right Side -->
           <div class="navbar-nav">
+            {% if current_user.is_authenticated %}
+            <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
+            {% else %}
             <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
             <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+            {% endif %}
           </div>
         </div>
       </div>
