--- a/ecommerceweb/templates/layout.html
+++ b/ecommerceweb/templates/layout.html
@@ -72,6 +72,17 @@
     </nav>
   </header>
   </nav>
+  <main role="main" class="container">
+      {% with messages = get_flashed_messages(with_categories=true) %}
+          {% if messages %}
+            {% for category, message in messages %}
+              <center><div class="alert alert-{{ category }}">
+                {{ message }}
+              </div><center>
+            {% endfor %}
+          {% endif %}
+        {% endwith %}
+  </main>
   {% block content %}{% endblock %}
   <footer class="py-5 bg-dark" style="height: 2px; bottom: initial;">
     <p class="m-0 text-center text-white">Copyright &copy; Your Website 2019</p>
