more products added

--- a/ecommerceweb/templates/layout.html
+++ b/ecommerceweb/templates/layout.html
@@ -60,8 +60,7 @@
                   <a href="#"class="dropdown-item">Home Decor</a>
                   <a href="#" class="dropdown-item">Ayurveda</a>
                   <a href="#" class="dropdown-item">Khadi cloth products</a>
-                  <a href="#" class="dropdown-item">Spices</a>
-                  <a href="#" class="dropdown-item">Pickles</a>
+                  <a href="#" class="dropdown-item">Jewellery</a>
                 </div>
             </div>
             <!-- Navbar Right Side -->
