--- a/ecommerceweb/templates/product_desc.html
+++ b/ecommerceweb/templates/product_desc.html
@@ -85,9 +85,7 @@
                 {% elif prod.category_id == 4%}
                 <h6 class="text-muted pt-3"><b>Khadi Cloth Products</b></h6>
                 {% elif prod.category_id == 5%}
-                <h6 class="text-muted pt-3"><b>Spices</b></h6>
-                {% elif prod.category_id == 6%}
-                <h6 class="text-muted pt-3"><b>Pickles</b></h6>
+                <h6 class="text-muted pt-3"><b>Jewellery</b></h6>
                 {% endif%}
                 <h3>{{ prod.name }}</h3>
                 {% if prod.stock>2 %}
