--- a/ecommerceweb/templates/category.html
+++ b/ecommerceweb/templates/category.html
@@ -10,7 +10,7 @@
     <div class="card-body">
     <h4 class="card-title">{{ prod[p].name }}</h4>
     <h6 class="card-text"><span class="currency">₹</span>{{ prod[p].cost }}</h6>
-    <a href="{{ url_for('product', id=prod[p].pid) }}" class="btn btn-danger">See More</a>
+    <a href="{{ url_for('product', id=prod[p].pid) }}" class="btn btn-outline-primary">See More</a>
     </div>
     </center>
   </div>
