--- a/ecommerceweb/templates/layout.html
+++ b/ecommerceweb/templates/layout.html
@@ -67,6 +67,7 @@
             <div class="navbar-nav">
               {% if current_user.is_authenticated %}
               <a class="nav-item nav-link" href="{{ url_for('cart') }}">Cart</a>
+              <a class="nav-item nav-link" href="{{ url_for('orders') }}">Your Orders</a>
               <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>
               <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
               {% else %}
