shipping and payment merged into checkout

--- a/ecommerceweb/templates/cart.html
+++ b/ecommerceweb/templates/cart.html
@@ -31,8 +31,12 @@
                                 <td></td>
                             </tr>
                             <tr>
-                                <td colspan="4"><a href="{{ url_for('payment')}}"><center><button class="btn btn-outline-primary">Confirm
-                                    Order</button></center></a>
+                                <td colspan="4">
+                                    <a href="{{ url_for('checkout')}}">
+                                        <center>
+                                            <button class="btn btn-outline-primary">Proceed To Payment</button>
+                                        </center>
+                                    </a>
                                 </td>
                             </tr>
                         </tbody>
