--- a/ecommerceweb/templates/home.html
+++ b/ecommerceweb/templates/home.html
@@ -14,16 +14,16 @@
     <!-- The slideshow -->
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{{ url_for('static', filename='gallery24.jpg') }}" width="inherit" height="50%">
+        <img src="{{ url_for('static', filename='gallery24.jpg') }}">
       </div>
       <div class="carousel-item">
-        <img src="{{ url_for('static', filename='gallery4.jpg') }}"  width="inherit" height="50%">
+        <img src="{{ url_for('static', filename='gallery4.jpg') }}">
       </div>
       <div class="carousel-item">
-        <img src="{{ url_for('static', filename='gallery8.jpg') }}"  width="inherit" height="50%">
+        <img src="{{ url_for('static', filename='gallery8.jpg') }}">
       </div>
       <div class="carousel-item">
-        <img src="{{ url_for('static', filename='gallery21.jpg') }}"  width="inherit" height="50%">
+        <img src="{{ url_for('static', filename='gallery21.jpg') }}">
       </div>
     </div>
     
@@ -61,7 +61,7 @@
             <div class="card-body">
             <h4 class="card-title">Home Decor</h4>
             <p class="card-text">Exclusive deals on home decor!</p>
-            <a href="#" class="btn btn-primary">See more</a>
+            <a href="{{url_for('categorypage', catname='homedecor')}}" class="btn btn-primary">See more</a>
             </div>
         </div>
     
